Add default handler for ClutterSwipeAction::swipe

So code that still uses the deprecated ::swept keeps working

https://bugzilla.gnome.org/show_bug.cgi?id=690735